# liri-browser

./: .excludes  .gitignore  .gitmodules  Application.qml  BookmarkItem.qml  BrowserTab.qml  BrowserWebView.qml  BrowserWindow.qml  CMakeLists.txt  CONTRIBUTORS.md  CONTRIBUTORS.md~  ColorPicker.qml  DownloadsDrawer.qml  DownloadsPopup.qml  HistoryDrawer.qml  LoadingIndicator.qml  Main.qml  Makefile  README.archive.md  README.md  README.md~  ShortcutActions.qml  TabManager.js  get_libs.py  index.html  liri-browser-ubuntu.pro  liri-browser.desktop  liri-browser.pro  main.cpp  manifest.json  material-browser  material-browser.pro  params.json  qml.qrc  qrc_qml.cpp  ubuntu.qmlproject
.tx/: config  config~
config/: liri-config.json
data/: CMakeLists.txt  liri-config.json
data/icons/: liri-browser.icns
plugins/: CMakeLists.txt
plugins/omniplet-bookmarks/: main.js  manifest.json
plugins/omniplet-calculator/: main.js  manifest.json
plugins/omniplet-duckduckgo/: main.js  manifest.json
plugins/omniplet-history/: main.js  manifest.json
plugins/omniplet-weather/: main.js  manifest.json
plugins/test/: main.js  manifest.json
scripts/: qrc.py
src/: CMakeLists.txt  clipboardadapter.cpp  clipboardadapter.h  config.cpp  config.h  liri-browser.qrc  main.cpp  qml.qrc
src/cursor/: cursor.cpp  cursor.h
src/plugins/: api.cpp  api.h  plugin.cpp  plugin.h  pluginsengine.cpp  pluginsengine.h  urlopener.cpp  urlopener.h
src/qml/: Application.qml  AwesomeActionButton.qml  BaseApplication.qml  BaseBrowserView.qml  BookmarkItem.qml  BookmarksBar.qml  BookmarksDrawer.qml  BrowserOxideWebView.qml  BrowserPage.qml  BrowserTab.qml  BrowserTabBar.qml  BrowserToolbar.qml  BrowserView.qml  BrowserWebView.qml  BrowserWindow.qml  BrowserWindow2.qml  ColorChooser.qml  ColorPicker.qml  DesktopApplication.qml  DownloadsDrawer.qml  FullscreenBar.qml  HistoryDrawer.qml  LoadingIndicator.qml  MaterialWindow.qml  MenuFieldThemed.qml  NewTabPage.qml  Omnibox.qml  PlayerPage.qml  QuickSearches.qml  QuickSearchesList.qml  QuickSearchesPage.qml  QuickSearchesView.qml  ResizeArea.qml  RightDrawer.qml  ScrollbarThemed.qml  SearchSuggestions.qml  Settings.qml  SettingsDrawer.qml  SettingsPage.qml  SettingsTabPage.qml  (+20 more)
src/qml/MaterialWindow/: MaterialWindow.qml  SystemButtons.qml
src/qml/components/: AwesomeActionButton.qml  LoadingIndicator.qml  QuickSearches.qml  TextFieldThemed.qml
src/qml/js/: utils.js
src/qml/model/: BookmarksModel.qml  DashboardModel.qml  DownloadsModel.qml  FormFill.qml  HistoryModel.qml  SearchSuggestionsModel.qml  Tab.qml  TabsModel.qml
src/qml/popups/: BookmarksDrawer.qml  ColorPicker.qml
src/qml/ubuntu/: Main.qml  Settings.qml  UbuntuApplication.qml  oxide-user.js
src/qml/ui/: BookmarksBar.qml  BrowserPage.qml  BrowserTabBar.qml  BrowserToolbar.qml  BrowserWindow.qml  FullscreenBar.qml  MaterialWindow.qml  Omnibox.qml  SearchSuggestions.qml  SystemButtons.qml  TabBarItem.qml  TabBarItemDelegate.qml  TabsListPage.qml
src/qml/views/: BrowserView.qml
src/qml/views/browser/: BrowserWebView.qml
src/qml/views/dashboard/: DashboardView.qml
src/qml/views/media/: PlayerPage.qml
src/qml/views/settings/: QuickSearchesPage.qml  SettingsDrawer.qml  SettingsPage.qml  SettingsView.qml  SitesColors.qml  SitesColorsPage.qml  SitesColorsView.qml
src/translations/: ar_MA.qm  ar_MA.ts  de_DE.qm  de_DE.ts  es_CR.qm  es_CR.ts  es_ES.qm  es_ES.ts  fr_FR.qm  fr_FR.ts  fr_FR.ts.bak  ko_KR.ts.bak  liri-browser.ts  pt_BR.qm  pt_BR.ts  pt_PT.qm  pt_PT.ts  ru_RU.qm  ru_RU.ts
src/ubuntu/: main.cpp
translations/: ar_MA.qm  ar_MA.ts  de_DE.qm  de_DE.ts  es_CR.ts  es_ES.qm  es_ES.ts  fr_FR.qm  fr_FR.ts  ko_KR.qm  pt_BR.qm  pt_BR.ts  pt_PT.qm  pt_PT.ts  ru_RU.qm  ru_RU.ts  zh_CN.ts
ubuntu/: Setup.md  liri-browser.timsueberkrueb.apparmor  liri-browser.timsueberkrueb.desktop
